--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,7 +9,8 @@
       "@config/*": ["config/*"],
       "@json/*": ["json/*"],
       "@hooks/*": ["hooks/*"],
-      "@lib/*": ["lib/*"]
+      "@lib/*": ["lib/*"],
+      "@/*": ["./*"]
     }
   }
 }
