--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.6",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
+    "js-cookie": "^3.0.5",
     "marked": "^14.1.0",
     "next": "^14.2.7",
     "next-mdx-remote": "^5.0.0",
